--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.56.1",
+    "axios": "^1.11.0",
+    "classnames": "^2.5.1",
     "csv-parser": "^3.2.0",
     "next": "^14.2.32",
     "react": "18.2.0",
