--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pay-site-next-supabase-stripe",
+  "name": "sayyes-pay-eu",
   "private": true,
   "version": "1.0.0",
   "scripts": {
@@ -12,13 +12,14 @@
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "csv-parser": "^3.2.0",
-    "next": "^14.2.32",
+    "next": "^15.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "stripe": "^16.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6"
+    "postcss": "^8.5.6",
+    "sass": "^1.92.1"
   }
 }
