--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^16.0.0",
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.56.1",
@@ -21,6 +24,7 @@
     "stripe": "^16.6.0"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "sass": "^1.92.1"
