--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.0.0",
-    "@stripe/react-stripe-js": "^4.0.2",
-    "@stripe/stripe-js": "^7.9.0",
-    "@supabase/supabase-js": "^2.56.1",
+    "@stripe/react-stripe-js": "^5.2.0",
+    "@stripe/stripe-js": "^8.1.0",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
     "csv-parser": "^3.2.0",
-    "next": "^15.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "stripe": "^16.6.0"
+    "next": "^16.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "stripe": "^19.1.0"
   },
   "devDependencies": {
     "@types/mdx": "^2.0.13",
